--- a/index.html
+++ b/index.html
@@ -4,10 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>myTESLA</title>
 </head>
 <body>
-    <h1>My Tesla</h1>
-    <p>Hey</p>
+ 
+    <div id="showcase">
+        <header id="header">
+            <div id="logo">
+                <h1>TESLA</h1>
+            </div>
+            <div id="nav">
+                <div class="nav-links">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Contact</a></li>
+                    <li><a href="">About</a></li>
+                </div>
+            </div>
+            <div id="hamburger">
+                <div class="line">-</div>
+                <div class="line">-</div>
+                <div class="line">-</div>
+            </div>
+        </header>
+        <img src="" alt="">
+        <div class="title"><h1>Model S</h1></div>
+        <div class="btn">
+            <button class="btn1"><h3>CUSTOM ORDER</h3></button>
+            <button class="btn2"><h3>EXISTING INVENTORY</h3></button>
+        </div>
+    </div>
 </body>
 </html>
