updated line styles

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 </div>
             </div>
             <div id="hamburger">
-                <div class="line">-</div>
-                <div class="line">-</div>
-                <div class="line">-</div>
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
             </div>
         </header>
         <img src="" alt="">
