--- a/index.html
+++ b/index.html
@@ -34,5 +34,21 @@
             <button class="btn2"><h3>EXISTING INVENTORY</h3></button>
         </div>
     </div>
+    <div id="about">
+        <div id="cards">
+            <div class="card">
+                <img src="" alt="">
+                <button>View</button>
+            </div>
+            <div class="card">
+                <img src="" alt="">
+                <button>View</button>
+            </div>
+            <div class="card">
+                <img src="" alt="">
+                <button>View</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
